hosts/nixos/pelargir/manifests/ddns.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ddns-updater
  namespace: home
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ddns-updater
  template:
    metadata:
      labels:
        app: ddns-updater
    spec:
      nodeSelector:
        kubernetes.io/hostname: pelargir
      containers:
        - name: ddns-updater
          image: docker.io/qmcgaw/ddns-updater@sha256:3e2aa558946b5a293def4d73008fa4651c072b2c12932cecd02126fb23979831
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: data
              mountPath: /updater/data
      volumes:
        - name: config-seed
          secret:
            secretName: ddns-updater-config
        - name: data
          emptyDir: {}
